--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,13 @@
 /*  GLOBAL STYLES
 ------------------------------------------------------------- */
-@import url('https://fonts.googleapis.com/css?family=Great+Vibes|Lato:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300');
+@import url('https://fonts.googleapis.com/css?family=Capriola');
+@import url('https://fonts.googleapis.com/css?family=Francois+One');
 
 body {
-    font-family: 'Lato', sans-serif;
-    font-weight: 400;
+    font-family: 'Roboto', Arial, sans-serif;
+    font-weight: 300;
+    color: #222;
 }
 a {
     color: #35146d;
@@ -264,23 +267,22 @@ a:focus {
 /*  HEADER
 ------------------------------------------------------------- */
 
-header {    
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 2;   
-    background: rgba(0, 0, 0, 0.85);    
+header {  
+    float: left;  
+    position: relative;
+    width: 100%;
+    display: block;
+    background: #6929da;   
 }
 .top {
-    background: #6929da;
+    background: #333;
 }
 .top .icon, 
 .top .social {
     margin: 0;
 }
 .top .icon {
-    padding: 8px 0;
+    padding: 2px 0;
 }
 .top .icon li {
     line-height: 14px;
@@ -522,7 +524,7 @@ footer .inner {
     padding: 60px 0 60px;
 }
 footer .inner h5 {
-    color: #333;
+    color: #222;
     font-size: 20px;
     font-weight: 600;
     margin: 0 0 30px;
@@ -541,7 +543,7 @@ footer .inner li:last-child {
 footer .inner li a,
 footer .inner li {
     font-size: 14px;
-    color: #333;
+    color: #222;
     line-height: 14px;
 }
 footer .inner li a:hover {
@@ -811,4 +813,114 @@ footer .powered .social li a:hover i {
     height: 100%;
     display: block;
     background: red;
+}
+
+/* FOODI MENU
+---------------------------------------------------------------------*/
+.menu {
+    position: relative;
+    float: left;
+    background: #f5f5f5;
+    width: 100%;
+}
+.menu-inner {
+  padding: 20px 0;
+}
+.page-title {
+    font-size: 45px;
+    font-family: 'Francois One', sans-serif;
+    color: #6929da;
+    line-height: 55px;
+    text-transform: uppercase !important;
+    margin-top: 0px;
+    font-weight: 300;
+}
+
+.menu .nav-tabs {
+    background: #fff;
+    border: 1px solid #e5e5e5;
+    margin: 0 auto 30px;
+    padding: 5px 10px;
+    text-align: center;
+}
+.menu .nav-tabs > li {
+    float:none;
+    display:inline-block;
+    padding: 0 10px 0 0;
+}
+.menu .nav-tabs > li:last-child {
+    padding: 0 0 0 0;
+}
+.menu .nav-tabs > li > a {
+    border:none;
+    font-weight: 600;
+    font-size: 14px;
+    color: #000;
+    line-height: 14px;
+    margin: 0 ;
+    text-transform:uppercase;
+    padding: 14px 25px;
+    border-radius: 4px;
+}
+.menu .nav-tabs > li > a.active,
+.menu .nav-tabs > li > a.active:hover,
+.menu .nav-tabs > li > a.active:focus,
+.menu .nav-tabs > li > a:hover {
+    color: #fff;
+    background: #6929da; 
+    border: none;
+} 
+.menu .box {
+    float: left;
+    border: 1px solid #e5e5e5;
+    margin-bottom: 10px; 
+    background: #fff;
+}
+.menu .box .image {
+    float: left;
+    width: 100%;
+    display: block;
+    text-align: center;
+    background: #eaeaea;
+}
+.menu .image .img-menu {
+    width: 100%;
+    height: 120px;
+    background: #eee;
+    text-align: center;
+}
+.menu .box .caption {
+    position: relative;
+    padding: 16px;
+    min-height: 100px;
+    float: left;
+    margin: 0;
+    background: #fff;
+    width: 100%;
+}
+.menu .box .caption h4 {
+    font-size: 16px;
+    font-weight: 600;
+    color: #6929da;
+    margin: 0 0 4px;
+}
+.menu .box .caption .des {
+    font-size: 14px;
+    color: #555;
+    margin: 0;
+    line-height: 20px;
+}
+.menu .box .caption span {
+    color: #757575;
+}
+.menu .box .caption .price {
+    font-size: 18px;
+    font-weight: 600;
+    color: #6929da;
+    margin-top: 10px;
+}
+.menu .box:hover {
+    -webkit-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.20);
+    -moz-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.20);
+    box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.20);
 }
